# AutoForwardHubx1

./: .env.example  .replit  PRODUCTION_READINESS_REPORT.md  PRODUCTION_SECURITY_AUDIT.md  README.md  STEALTH_IMPLEMENTATION_REPORT.md  SYSTEM_TEST_REPORT.md  cleaner_config.json  comprehensive-test.sh  config_validator.py  discord_bot.py  discord_bot_standalone.py  logging_config.py  package-lock.json  package.json  paused_users.json  pyproject.toml  replit.md  retry_util.py  security_audit.py  setup-database.js  setup-database.md  stealth_config.json  stealth_engine.py  system_validator.py  telegram_admin_bot.py  telegram_poster.py  telegram_poster_config.json  telegram_poster_enhanced.py  telegram_poster_stealth.py  test-system.sh  test_cleaner_standalone.py  test_message_cleaner.py  test_stealth_engine.py  user_copies.json
attached_assets/: AutoForwardX_Complete_System_Design_1751298784209.md  AutoForwardX_Deployment_Guide_1751293792142.md  AutoForwardX_Implementation_Guide_1751305108692.md  Pasted--1-Manages-Multi-User-Sessions-Each-user-from-user-copies-json-appears-as-a-card-Sho-1751309361658_1751309361658.txt  Pasted--1-Manages-Multi-User-Sessions-Each-user-from-user-copies-json-appears-as-a-card-Show--1751309336665_1751309336667.txt  Pasted--Session-Management-OTP-Setup-for-Telethon-AutoForwardX-uses-Telethon-user-sessions-to-1751295356172_1751295356173.txt  Pasted--Update-the-project-to-fully-fix-and-connect-the-Add-Session-button-Frontend-Form-Requiremen-1751710506833_1751710506834.txt  (+14 more)
config/: blocklist.json  pairs.json  sessions.json
data/: database.sqlite  (+1 more)
(+79 files in other folders)
