[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.13",
    "cryptg>=0.5.0.post0",
    "discord-py>=2.5.2",
    "fastapi>=0.115.14",
    "pillow>=11.2.1",
    "pydantic>=2.11.7",
    "pyrogram>=2.0.106",
    "python-dotenv>=1.1.1",
    "python-telegram-bot>=22.2",
    "requests>=2.32.4",
    "telegram>=0.0.1",
    "telethon>=1.40.0",
    "tgcrypto>=1.2.5",
    "uvicorn>=0.35.0",
]
